temporary fix overflow breakout, add artwork to dropdown station

--- a/src/ListenLiveButton/style.scss
+++ b/src/ListenLiveButton/style.scss
@@ -24,7 +24,7 @@ button {
 .listen-live-container {
 	display: inline-flex;
 
-	position: relative;
+	//position: relative;
 
 	background-color: var(--backgroundColor, #e00);
 	background-image: linear-gradient(
@@ -230,7 +230,7 @@ button {
 .dropdown-container {
 	display: flex;
 	position: absolute;
-	top: 100%;
+	top: var(--buttonBottom, 100%);
 	z-index: 2147483640;
 
 	//width: 100vw;
@@ -321,10 +321,6 @@ button {
 		h2 {
 			font-size: 1.3em;
 		}
-		h3 {
-			margin-top: 0.25em;
-			font-size: 1.1em;
-		}
 
 		img {
 			height: auto;
@@ -339,6 +335,7 @@ button {
 			width: 20%;
 			min-height: 2em;
 			position: relative;
+			top: 0.25em;
 
 			opacity: 1;
 			transition: opacity 0.2s;
@@ -383,8 +380,21 @@ button {
 		}
 
 		.nowplaying {
+			display: flex;
+			gap: 0.75em;
+
+			margin-top: 0.5em;
+
 			font-size: 0.9em;
 			line-height: 1.3;
+
+			.artwork {
+				max-height: 3em;
+			}
+
+			h3 {
+				font-size: 1.15em;
+			}
 		}
 	}
 }
